--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@ title: Hank Quinlan, Horrible Cop
 ---
 <div class="blurb">
 	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p>I'm a student at the academy for software engineering <em> i like to code video games more than this but i need to learn this</em> this week we learned how to setup our blog website(which i'm typing in right now). <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
 
