--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Louis Gonzalez, student
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
+	<h1>Hi there, I'm Louis Gonzalez!</h1>
 	<p>I'm a student at the academy for software engineering <em> i like to code video games more than this but i need to learn this</em> this week we learned how to setup our blog website(which i'm typing in right now). <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
 
